# DBErdDesktop

./: .gitignore  AGENTS.md  DBErdDesktop.spec  LICENSE  README.md  build_exe.ps1  pyproject.toml  requirements-exe.txt  requirements.txt  run.py
db_erd_desktop/: app.py  backend.py  db.py  documents.py  erd_scene.py  models.py  naming.py  session_store.py  single_instance.py  tunnel.py
db_erd_desktop/qml/: Main.qml
doc/: PRD.md
