[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "db-erd-desktop"
version = "0.1.0"
description = "Qt6 desktop app for database ERD generation and document export."
requires-python = ">=3.14"
dependencies = [
  "PySide6>=6.11.0",
  "SQLAlchemy>=2.0.49",
  "python-docx>=1.2.0",
  "python-pptx>=1.0.2",
  "sshtunnel>=0.4.0",
  "cryptography>=48.0.0",
]

[project.optional-dependencies]
mysql = ["PyMySQL>=1.1.3"]
postgresql = ["psycopg[binary]>=3.3.4"]
mssql = ["pyodbc>=5.3.0"]
oracle = ["oracledb>=4.0.0"]
all-databases = [
  "PyMySQL>=1.1.3",
  "psycopg[binary]>=3.3.4",
  "pyodbc>=5.3.0",
  "oracledb>=4.0.0",
]

[project.scripts]
db-erd-desktop = "db_erd_desktop.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["db_erd_desktop*"]
